# ds_case_solution

./: .gitignore  README.md  pyproject.toml  requirements.txt  workbook.ipynb
src/: pipeline.py  workhours.py
