[tool.poetry]
name = "bdf_case"
version = "0.1.0"
description = ""
authors = ["care1e55 <sfilms89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "*"
typer = "*"
pandas = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
